--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -78,15 +78,15 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/event/8?mail" target="_blank" style="color: #f00000">
-                                <img src="http://medalmanah.ru/upload/event/1464645318.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/event/mezhdunarodnyj_sammit_prediktivno_preventivnaja_i_personalizirovannaja_meditsina_osnova_novoj_sistemy_zdravoohranenija_?mail" target="_blank" style="color: #f00000">
+                                <img src="https://medalmanah.ru/upload/event/1474493778.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">10.09.2016 - 13.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/event/8?mail" target="_blank" style="color: #f00000"><strong>IX Общероссийский семинар «Репродуктивный потенциал России: версии и контраверсии»</strong></a></div>
-                        <p style="font-size: 10pt">«Сочинские контраверсии» уже девятый год подряд собирают профессионалов репродуктивной медицины, стремящихся к совершенству в своей практической и научной работе. Постепенно это уже становится доброй традицией для прогрессивной медицинской общественности — в начале сентября собираться на «Сочинские контраверсии», давая старт рабочему году и аккумулируя на весь этот период столь нужный всем нам настрой на позитив.</p>
+                        <span style="color: #777">26.09.2016 - 28.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/event/mezhdunarodnyj_sammit_prediktivno_preventivnaja_i_personalizirovannaja_meditsina_osnova_novoj_sistemy_zdravoohranenija_?mail" target="_blank" style="color: #f00000"><strong>Международный саммит "Предиктивно-превентивная и персонализированная медицина - основа новой системы здравоохранения"</strong></a></div>
+                        <p style="font-size: 10pt">Предиктивно-превентивная и персонализированная медицина  – это оказание комплексной медицинской помощи, осуществляемое в соответствии с характеристиками конкретного пациента, еще до момента проявления заболеваний. Эти направления медицины учитывают не только используемые уже в течение долгого времени клинические признаки, например, возраст, пол, телосложение, семейная история, и другие, но, в первую очередь, молекулярные характеристики организма человека.</p>
                     </td>
                 </tr>
                 <tr>
@@ -98,15 +98,18 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/event/7?mail" target="_blank" style="color: #f00000">
-                                <img src="http://medalmanah.ru/upload/event/1464642619.jpeg" style="width: 160px">
+                            <a href="https://medalmanah.ru/event/6?mail" target="_blank" style="color: #f00000">
+                                <img src="https://medalmanah.ru/upload/event/1464643631.jpeg" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">13.09.2016 - 13.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/event/7?mail" target="_blank" style="color: #f00000"><strong>Амбулаторный прием. Цикл образовательных сессий для врачей поликлиник Сессия: "Лекарственный справочник амбулаторного терапевта"</strong></a></div>
-                        <p style="font-size: 10pt">Уважаемые коллеги! Рады сообщить, что участники сессии получат сертификат с образовательными кредитами по системе повышения квалификации в рамках НМО (6 кредитов), которые будут учитываться при аккредитации специалистов.</p>
+                        <span style="color: #777">27.09.2016 - 30.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/event/6?mail" target="_blank" style="color: #f00000"><strong>2016 XVII Всероссийский научный форум "Мать и Дитя 2016; XVIII Международная специализированная выставка «Охрана здоровья матери и ребенка – 2016»</strong></a></div>
+                        <p style="font-size: 10pt">
+                            Модернизация здравоохранения: основные направления работы по снижению материнской и младенческой заболеваемости и смертности:<br />
+                            роль перинатальных центров в повышении доступности, эффективности и качества  помощи женщинам и детям ...
+                        </p>
                     </td>
                 </tr>
                 <tr>
@@ -117,15 +120,15 @@
                 <tr style="background: #FFF; padding: 10px" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/event/dni_revmatologii_v_sankt_peterburge_kak_ostanovit_invalidizatsiju_natsii?mail" target="_blank" style="color: #f00000">
-                                <img src="https://medalmanah.ru/upload/event/1473365770.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/event/vii_obscherossijskaja_konferentsija_s_mezhdunarodnym_uchastiem_%C2%ABnedelja_meditsinskogo_obrazovanija_2016%C2%BB_pervyj_mgmu_im_im_sechenova_?mail" target="_blank" style="color: #f00000">
+                                <img src="https://medalmanah.ru/upload/event/1474494556.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">15.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/event/dni_revmatologii_v_sankt_peterburge_kak_ostanovit_invalidizatsiju_natsii?mail" target="_blank" style="color: #f00000"><strong>Дни ревматологии в Санкт-Петербурге: как остановить инвалидизацию нации</strong></a></div>
-                        <p style="font-size: 10pt">Ревматические заболевания занимают одно из первых мест в «рейтинге» болезней человечества. Эти заболевания приводят к поражению суставов и внутренних органов, что превращает жизнь больного в непрерывную борьбу с болью и потерей подвижности. Ранняя инвалидизация, потеря трудоспособности и преждевременная смерть – таков исход заболевания, если вовремя не начать лечение.</p>
+                        <span style="color: #777">27.09.2016 - 28.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/event/vii_obscherossijskaja_konferentsija_s_mezhdunarodnym_uchastiem_%C2%ABnedelja_meditsinskogo_obrazovanija_2016%C2%BB_pervyj_mgmu_im_im_sechenova_?mail" target="_blank" style="color: #f00000"><strong>VII Общероссийская конференция с международным участием «Неделя медицинского образования - 2016» Первый МГМУ им. И.М. Сеченова</strong></a></div>
+                        <p style="font-size: 10pt">КАЧЕСТВО МЕДИЦИНСКОГО ОБРАЗОВАНИЯ – ОТ ПРОФИЛЬНОЙ ШКОЛЫ К ПРОФЕССИОНАЛЬНОМУ СТАНДАРТУ</p>
                     </td>
                 </tr>
                 <tr>
@@ -138,15 +141,16 @@
                 <tr style="background: #FFF; padding: 10px" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/event/rossijskij_natsionalnyj_kongress_kardiologov_2016?mail" target="_blank" style="color: #f00000">
-                                <img src="http://medalmanah.ru/upload/event/1469648192.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/event/nauchno_prakticheskij_seminar_fizicheskoe_i_seksualnoe_zdorove_pary_zrelogo_vozrasta_mezhdistsiplinarnyj_podhod_?mail" target="_blank" style="color: #f00000">
+                                <img src="https://medalmanah.ru/upload/event/1473969020.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">20.09.2016 - 23.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/event/rossijskij_natsionalnyj_kongress_kardiologov_2016?mail" target="_blank" style="color: #f00000"><strong>Российский национальный конгресс кардиологов 2016</strong></a></div>
-                        <p style="font-size: 10pt">Уважаемые коллеги! Общероссийская общественная организация «Российское кардиологическое общество» приглашает Вас принять участие в Российском национальном конгрессе кардиологов.</p>
+                        <span style="color: #777">29.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/event/nauchno_prakticheskij_seminar_fizicheskoe_i_seksualnoe_zdorove_pary_zrelogo_vozrasta_mezhdistsiplinarnyj_podhod_?mail" target="_blank" style="color: #f00000"><strong>Научно-практический семинар "Физическое и сексуальное здоровье пары зрелого возраста. Междисциплинарный подход".</strong></a></div>
+                        <p style="font-size: 10pt">Рапопрот Александр. Мужчина и женщина. Психология гармонии в паре.
+                            Липова Елена Валерьевна. Современные возможности сохранения физического и сексуального здоровья женщины в пери- и постменопаузе.</p>
                     </td>
                 </tr>
                 <tr>
@@ -203,16 +207,15 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/publications/news/novyj_mehanizm_dejstvija_aspirina?mail" target="_blank" style="color: #F00000">
-                                <img src="https://medalmanah.ru/upload/publication/1473281665.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/minzdrav_nachinaet_proverki_kachestva_meditsinskih_profosmotrov?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1474493078.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">07.09.2016</span><br />
-                        <div><strong><a href="https://medalmanah.ru/publications/news/novyj_mehanizm_dejstvija_aspirina?mail" target="_blank" style="color: #F00000">Новый механизм действия аспирина</a></strong></div>
-                        <p>Способность аспирина уменьшать риск развития сердечно - сосудистых заболеваний, рака толстой
-                            кишки, а также действовать, как обезболивающее средство, использовалось в медицине уже больше 100 лет.</p>
+                        <span style="color: #777">22.09.2016</span><br />
+                        <div><strong><a href="https://medalmanah.ru/publications/news/minzdrav_nachinaet_proverki_kachestva_meditsinskih_profosmotrov?mail" target="_blank" style="color: #F00000">Минздрав начинает проверки качества медицинских профосмотров</a></strong></div>
+                        <p>Такое поручение ведомству дал Дмитрий Медведев. Поимом Минздрава России в проверках будет участвовать и Роспотребнадзор</p>
                     </td>
                 </tr>
                 <tr>
@@ -222,16 +225,16 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/publications/news/otkrytie_daet_nadezhdu_na_lechenie_bolezni_krona?mail" target="_blank" style="color: #F00000">
-                                <img src="https://medalmanah.ru/upload/publication/1473164927.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/net_otgovorkam_gen_ozhirenija_ne_obrekaet_na_izbytochnyj_ves?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1474478286.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
 
-                        <span style="color: #777">06.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/publications/news/otkrytie_daet_nadezhdu_na_lechenie_bolezni_krona?mail" target="_blank" style="color: #F00000"><strong>Открытие дает надежду на лечение болезни Крона</strong></a></div>
-                        <p>Учёные из Университета Британской Колумбии (University of British Columbia) сделали открытие, которое может привести к лечению осложнений болезни Крона.</p>
+                        <span style="color: #777">21.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/publications/news/net_otgovorkam_gen_ozhirenija_ne_obrekaet_na_izbytochnyj_ves?mail" target="_blank" style="color: #F00000"><strong>Нет отговоркам, ген ожирения не обрекает на избыточный вес</strong></a></div>
+                        <p>Люди, имеющие у себя так называемый ген ожирения FTO, реагируют на диеты и физические упражнения точно так же, как и люди без него.</p>
                     </td>
                 </tr>
                 <tr>
@@ -241,15 +244,17 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/publications/news/gumannost_i_evtanazija?mail" target="_blank" style="color: #F00000">
-                                <img src="https://medalmanah.ru/upload/publication/1473119242.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/pischevaja_allergija_u_detej_i_kak_ee_predotvratit?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1474404108.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">06.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/publications/news/gumannost_i_evtanazija?mail" target="_blank" style="color: #F00000"><strong>Гуманность и эвтаназия</strong></a></div>
-                        <p>Уполномоченный по правам человека в Российской Федерации Татьяна Москалькова сделала заявление о том, что считает эвтаназию гуманной.</p>
+                        <span style="color: #777">20.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/publications/news/pischevaja_allergija_u_detej_i_kak_ee_predotvratit?mail" target="_blank" style="color: #F00000"><strong>Пищевая аллергия у детей и как ее предотвратить</strong></a></div>
+                        <p>
+                            Кормление младенцев яйцами и арахисом может снизить риск развития аллергии на пищевые продукты, выявило новое исследование, опубликованное в журнале Американской медицинской ассоциации (American Medical Association).
+                        </p>
                     </td>
                 </tr>
                 <tr>
@@ -259,15 +264,15 @@
                 <tr style="background: #FFF" bgcolor="#FFF">
                     <td style="text-align: left; width: 200px; vertical-align: top" align="left" valign="top" >
                         <span style="display: inline-block; padding: 3px; border: 1px solid #CCC; border-radius: 3px">
-                            <a href="https://medalmanah.ru/publications/news/obnaruzheno_tri_podtipa_raka_pischevoda?mail" target="_blank" style="color: #F00000">
-                                <img src="https://medalmanah.ru/upload/publication/1473107836.png" style="width: 160px">
+                            <a href="https://medalmanah.ru/publications/news/vrachi_revmatologi_pomogut_ostanovit_invalidizatsiju_rossijan?mail" target="_blank" style="color: #F00000">
+                                <img src="https://medalmanah.ru/upload/publication/1474385089.png" style="width: 160px">
                             </a>
                         </span>
                     </td>
                     <td style="text-align: left; font-size: 16px" align="left" >
-                        <span style="color: #777">05.09.2016</span><br />
-                        <div><a href="https://medalmanah.ru/publications/news/obnaruzheno_tri_podtipa_raka_pischevoda?mail" target="_blank" style="color: #F00000"><strong>Обнаружено три подтипа рака пищевода</strong></a></div>
-                        <p>Учёные обнаружили, что рак пищевода можно разделить на три различных подтипа. Это открытие, опубликованное в Nature Genetics, может помочь найти препараты, способные действовать на слабые места в каждом подтипе, повышая эффективность лечения и выживаемость пациентов.</p>
+                        <span style="color: #777">20.09.2016</span><br />
+                        <div><a href="https://medalmanah.ru/publications/news/vrachi_revmatologi_pomogut_ostanovit_invalidizatsiju_rossijan?mail" target="_blank" style="color: #F00000"><strong>Врачи-ревматологи помогут остановить инвалидизацию россиян</strong></a></div>
+                        <p>15 сентября 2016 года в Санкт-Петербурге состоялась пресс-конференция в рамках Конгресса с международным участием «Дни ревматологии в Санкт-Петербурге».</p>
                     </td>
                 </tr>
                 <tr>
