--- a/src/AdminBundle/Resources/views/Event/list.html.twig
+++ b/src/AdminBundle/Resources/views/Event/list.html.twig
@@ -12,6 +12,17 @@
 
 {% block content %}
     <div class="well">
+
+        <form role="form" class="form-inline" method="get">
+            <div class="form-group">
+                <input type="text" class="form-control" id="name" placeholder="Введите Название" style="width: 400px" name="name">
+            </div>
+            <div class="form-group">
+                <input type="date" class="form-control" id="date" placeholder="Дата" value="{{ 'now' | date('Y-m-d') }}" name="date">
+            </div>
+            <button type="submit" class="btn btn-primary">Найти</button>
+        </form>
+
         <table class="table">
             <tr>
                 <th>№</th>
