--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -627,15 +627,16 @@ th.prev, th.next, th.picker-switch{
 .event-carusel{
     overflow: hidden;
     .item{
-        float: left;
-        width: 20%;
+        //float: left;
+        //width: 20%;
         div{
             padding: 0 5px;
             text-align: left;
             img{
                 //width: 90%;
-                margin-left: 40px;
+                //margin-left: 40px;
                 height: 135px;
+                width: auto;
                 -webkit-filter: grayscale(100%);
                 filter: grayscale(100%);
                 -moz-filter: grayscale(100%);
