--- a/src/AppBundle/Resources/views/Widget/carusel.html.twig
+++ b/src/AppBundle/Resources/views/Widget/carusel.html.twig
@@ -1,4 +1,4 @@
-<div class="owl-carousel owl-theme">
+<div class="owl-carousel owl-theme slider">
     {% for c in carusel %}
         <div class="item">
             {% if c.url != null %}
