--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -40,7 +40,7 @@
         {% endif %}
     </div>
     <div class="row publication-footerline">
-        <div class="col-xs-6 col-md-4 col-md-offset-3 text-left">
+        <div class="col-xs-6 col-md-4 text-left">
             <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
             <span class="hidden" itemprop="dateModified" content="{{ publication.created | date('Y-m-d') }}">{{ publication.created | date('d.m.Y') }}</span>
         </div>
