--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -162,9 +162,9 @@
                         {#<a target="_blank" href="https://www.youtube.com/channel/UCgS0JAUqUpDojH6rIDXGfZA"><img src="{{ asset('bundles/app/images/icons/gp.png') }}" class="social-icon"></a>#}
                         {#<a target="_blank" href="http://ok.ru/group/57034519412770"><img src="{{ asset('bundles/app/images/icons/od.png') }}" class="social-icon"></a>#}
                         {#<img src="{{ asset('bundles/app/images/icons/icons.png') }}">#}
-                        <a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a>
-                        <a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a>
-                        <a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a>
+                        <noindex><a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a></noindex>
+                        <noindex><a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a></noindex>
+                            <noindex><a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a></noindex>
                     </div>
                 </div>
                 <div class="contacts row">
