--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -5,7 +5,7 @@
         <td style="background: #f00000; font-size: 10px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td colspan="2" style="background: #FFF" bgcolor="#FFF">
@@ -22,13 +22,13 @@
         </td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td colspan="2">
@@ -43,7 +43,7 @@
         </td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
 
     <tr>
@@ -53,7 +53,7 @@
         <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="padding-left: 50px; font-size: 24px; color: #555; background: #FFF" colspan="2" bgcolor="#FFF">
@@ -61,7 +61,7 @@
         </td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
@@ -191,13 +191,13 @@
         <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="padding-left: 50px; font-size: 24px; color: #555; background: #FFF" bgcolor="#FFF" colspan="2"><a style="color: #555; text-decoration: none" href="https://medalmanah.ru{{ path('news') }}?delivery-1">Интересные новости</a></td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
@@ -304,13 +304,13 @@
     </tr>
 
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr>
         <td style="background: #f00000; font-size: 3px" colspan="2"><br /></td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr style="background: #FFF" bgcolor="#FFF">
         <td style="text-align: center; font-size: 24px; color: #555" colspan="2">
@@ -321,7 +321,7 @@
         </td>
     </tr>
     <tr>
-        <td style="background: #FFF" bgcolor="#FFF" colspan="2"><br /></td>
+        <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
 </table>
 <img src="https://medalmanah.ru/analytics/getimage/firstdelivery/{{ id }}"/>
