--- a/src/AppBundle/Resources/views/Mail/delivery.html.twig
+++ b/src/AppBundle/Resources/views/Mail/delivery.html.twig
@@ -313,8 +313,8 @@
         <td style="background: #FFF; font-size: 7px;" bgcolor="#FFF" colspan="2"><br /></td>
     </tr>
     <tr style="background: #FFF" bgcolor="#FFF">
-        <td style="text-align: center; font-size: 24px; color: #555" colspan="2">
-            С уважением, служба поддержки medalmanah.ru
+        <td style="text-align: center; font-size: 20px; color: #555" colspan="2">
+            С уважением, служба поддержки <a href="https://medalmanah.ru" target="_blank">medalmanah.ru</a>
             <div style="font-size: 13px">
                 Для отмены подписки пройдите пожалуйста по <a href="https://medalmanah.ru{{ path('unfollow') }}?email={{ email }}">ссылке</a>
             </div>
