--- a/src/AppBundle/Resources/views/Default/testwebinar.html.twig
+++ b/src/AppBundle/Resources/views/Default/testwebinar.html.twig
@@ -72,7 +72,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12 text-right">
-                            <button type="button" class="btn btn-primary">Отправить</button>
+                            <button type="button" class="btn btn-primary" disabled>Отправить</button>
                         </div>
                     </div>
                 </form>
