--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -37,7 +37,7 @@
                     <ul class="submenu-items">
                         <li><a href="{{ path('events',{'url': 'fpdo-courses'}) }}">КУРСЫ ФПДО</a></li>
                         <li><a href="{{ path('events',{'url': 'online-courses'}) }}">ОНЛАЙН ОБУЧЕНИЕ</a></li>
-                        {#<li><a href="{{ path('events',{'url': 'internships'}) }}">СТАЖИРОВКИ</a></li>#}
+                        <li><a href="{{ path('events',{'url': 'internships'}) }}">СТАЖИРОВКИ</a></li>
                     </ul>
                 </div>
             </li>
