--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -188,9 +188,9 @@
                         <li>
                             <a href="{{ path('page',{'url' : 'about'}) }}">О НАС</a>
                         </li>
-                        <li>
-                            <a href="{{ path('page',{'url' : 'politicy'}) }}">ПОЛИТИКА РЕДАКЦИИ</a>
-                        </li>
+                        {#<li>#}
+                            {#<a href="{{ path('page',{'url' : 'politicy'}) }}">ПОЛИТИКА РЕДАКЦИИ</a>#}
+                        {#</li>#}
                         <li>
                             <a href="{{ path('page',{'url' : 'eula'}) }}">ПОЛЬЗОВАТЕЛЬСКОЕ СОГЛАШЕНИЕ</a>
                         </li>
