add rating, like & dislike

--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -918,3 +918,12 @@ nav .navbar-nav li.active a:hover{
 .owl-carousel{
     display: block;
 }
+.like, .dislike{
+    cursor: pointer;
+    font-size: 24px;
+    display: inline-block;
+    margin-left: 20px;
+    i{
+        padding-left: 5px;
+    }
+}
