--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -864,3 +864,14 @@ nav .navbar-nav li.active a:hover {
 .owl-carousel {
   display: block;
 }
+.like,
+.dislike {
+  cursor: pointer;
+  font-size: 24px;
+  display: inline-block;
+  margin-left: 20px;
+}
+.like i,
+.dislike i {
+  padding-left: 5px;
+}
