--- a/src/AppBundle/Resources/views/Publication/publication.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.html.twig
@@ -91,6 +91,11 @@
                     <div itemprop="description">
                         {% if is_granted('IS_AUTHENTICATED_FULLY') or publication.public == true %}
                             {{ publication.body | raw }}
+                            <div style="font-size: 16px">
+                                <strong>Оцените, пожалуйста, статью:</strong>
+                                <span class="like text-success">{{ publication.like }}<i class="fa fa-thumbs-o-up" aria-hidden="true" data-id="{{ publication.id }}"></i></span>
+                                <span class="dislike text-danger">{{ publication.dislike }}<i class="fa fa-thumbs-o-down" aria-hidden="true" data-id="{{ publication.id }}"></i></span>
+                            </div>
                         {% endif %}
                         {% if publication.video.path is defined %}
                             <div style="text-align: center">
@@ -144,6 +149,7 @@
                                 <span>{{ ss }}</span>
                             {% endif %}
                         </div>
+                        <b>Рейтинг</b>: {{ publication.show * 3  + publication.like * 5 + publication.dislike }}<br />
                     </div>
                     <div class="col-sm-6 text-right" style="padding-top: 5px;">
                         {#<span style="font-size: 12px">Расказать друзьям&nbsp;&nbsp;</span>#}
