--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -927,3 +927,13 @@ nav .navbar-nav li.active a:hover{
         padding-left: 5px;
     }
 }
+.fa-thumbs-o-up:hover{
+    :before{
+        content: "\f164";
+    }
+}
+.fa-thumbs-o-down:hover{
+    :before{
+        content: "\f165";
+    }
+}
