--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -29,7 +29,7 @@
 {% block content %}
     <div class="col-sm-12">
         <div class="row">
-            <div class="title"><h1>{{ event.title }}</h1></div>
+            <div class="title"><h3>{{ event.title }}</h3></div>
             <ol class="breadcrumb">
                 <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
                     <a itemprop="url" href="/"><span itemprop="title">Главная</span></a></li>
@@ -56,7 +56,7 @@
             <div class="col-xs-{{ event.preview.path is defined ? '6' : '10' }}">
                 <ul class="event-params">
                     {% if event.specialties | length > 0 %}
-                        {% if publication.specialties | length != 60 %}
+                        {% if event.specialties | length != 60 %}
                             <li><b>Специальности:</b>
                                 {% for s in event.specialties %}
                                     {{ s.title }}
