--- a/src/AppBundle/Resources/views/Publication/eventsmap.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventsmap.html.twig
@@ -108,13 +108,17 @@
                     dataType: 'jsonp',
                     timeout: 500,
                     success: function(msg){
-                        var coords = msg.response.GeoObjectCollection.featureMember[0].GeoObject.Point.pos.split(" ");
+                        try {
+                            var coords = msg.response.GeoObjectCollection.featureMember[0].GeoObject.Point.pos.split(" ");
+                        }catch(err){
+                            console.log(link);
+                        }
                         console.log(event.title+' '+coords);
                         geoObjects = new ymaps.Placemark([coords[1], coords[0]], getPointData(index), getPointOptions());
                         clusterer.add(geoObjects);
                     },
                     error: function(){
-                        console.log(event.title);
+                        console.log(event.title)
                     }
                 });
 
