--- a/src/AppBundle/Resources/views/Publication/eventsmap.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventsmap.html.twig
@@ -101,7 +101,7 @@
                 var index = k;
                 link = 'https://geocode-maps.yandex.ru/1.x/?geocode=город+'+event.title+'&kind=locality&format=json&results=1&sco=latlong';
 
-                $.jsonp({
+                $.ajax({
                     type: 'GET',
                     url: link,
                     callbackParameter: 'callback',
